send: sanitize input by type mod & error danger css wrap correction & batch send to top aligned

--- a/src/scss/components/modal/confirm-send/desktop/_batch.scss
+++ b/src/scss/components/modal/confirm-send/desktop/_batch.scss
@@ -23,6 +23,9 @@
     & .to {
       & .left {
         width: 25%;
+        & span {
+          margin: 0;
+        }
       }
 
       & .right {
