--- a/src/scss/components/modal/prepare-send.scss
+++ b/src/scss/components/modal/prepare-send.scss
@@ -192,11 +192,6 @@ $base-background-color: v.$base-background-color;
   & .bottom {
     margin: 0;
 
-    & .label {
-      height: 1.5rem;
-      margin: 0.5rem 0.25rem 0.25rem 0.25rem;
-    }
-
     & .danger {
       color: $base-red-color;
     }
